Moved main content styling to styles.css

--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,9 @@ body {
 }
 
 .main-content {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
   width: 100%;
   flex-grow: 1;
   overflow-y: scroll;
